<resources>
    <string name="appName">LoftMoney</string>
    <string name="applicationLogoDescription">Application logo</string>
    <string name="AuthActivityEnterButton">Войти</string>
    <string name="mainActivityLabel">Учёт бюджета</string>
    <string name="transactionNameHint">Название</string>
    <string name="transactionPriceHint">Стоимость</string>
    <string name="addTransactionButtonCaption">Добавить</string>
    <string name="tabCaptionIncome">Доходы</string>
    <string name="tabCaptionConsumption">Расходы</string>
    <string name="tabCaptionBalance">Баланс</string>
    <string name="action_mode_item__delete">Удалить</string>
    <string name="confirmDeleteTransactionText">Вы действительно хотите удалить выбранные элементы?</string>
    <string name="confirmYesButtonText">Да</string>
    <string name="confirmNoButtonText">Нет</string>
    <string name="actionModeTitle">Выделено:</string>
    <string name="availableBalanceTitle">Доступные финансы</string>
    <string name="allIncomeTitle">Доход</string>
    <string name="allConsumptionTitle">Расход</string>
    <string name="rubleSign">₽</string>
</resources>
