<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AuthActivity">

    <ImageView
        android:src="@drawable/ic_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/applicationLogoDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appName"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:textSize="@dimen/AuthActivityLabelTextSize"
        android:layout_marginTop="@dimen/AuthActivityLabelTopMargin"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/auth_enter_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/AuthEnterButtonHeight"
        android:layout_marginTop="@dimen/AuthActivityLabelTopMargin"
        android:backgroundTint="@color/white"
        android:paddingStart="@dimen/AuthEnterButtonHorizontalPadding"
        android:paddingEnd="@dimen/AuthEnterButtonHorizontalPadding"
        android:text="@string/AuthActivityEnterButton"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/AuthEnterButtonTextSize"
        app:cornerRadius="@dimen/AuthEnterButtonRadius" />

</LinearLayout>