<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddTransactionActivity">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TransactionTextInputLayout"
        android:layout_marginTop="@dimen/TransactionNameInputTopMargin"
        android:hint="@string/transactionNameHint">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TransactionInputs"
            android:id="@+id/purchase_name_input"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TransactionTextInputLayout"
        android:layout_marginTop="@dimen/TransactionPriceInputTopMargin"
        android:hint="@string/transactionPriceHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/purchase_price_input"
            style="@style/TransactionInputs"
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_transaction_button"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/addTransactionButtonMarginTop"
        android:background="@null"
        android:textSize="@dimen/addTransactionButtonTextSize"
        android:textColor="@color/add_transaction_button_color"
        android:layout_gravity="center_horizontal"
        android:text="@string/addTransactionButtonCaption"
        android:drawableStart="@drawable/ic_check"
        android:drawablePadding="@dimen/addTransactionButtonDrawablePadding"/>

</LinearLayout>